styles.css
body {
    margin: 0;
}

.body {
    display: flex;
}

/* Start of hero/header section */

.hero {
    background-color: #1F2937;
    height: 500px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 24px;
    padding: 0px 120px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

.main-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.body {
    display: flex;
    flex-direction: column;
    padding: 0px 120px;
    width: 400px;
}

.hero-main-text {
    font-size: 48px;
    font-weight: bold;
    color: #F9FAF8;
    margin-bottom: 0;
}

.hero-secondary-text {
    font-size: 18px;
    color: #e5e7eb;
}

button {
    background-color: #3882F6;
    color: white;
    width: 100px;
}

.rocky-mylo {
    border: 6px solid black;
    border-radius: 25px;
    width: 700px;
    height: auto;
    margin-right: 130px;
    margin-top: 50px;
}
/* End of hero/header section */


/* Start call to action */

h1 {
    margin-top: 50px;
    margin-bottom: 50px;
    font-size: 36px;
    color: #1F2937;
    text-align: center;
}

.illustration-container {
    display: flex;
    justify-content: center;
    gap: 52px;
    margin-bottom: 100px;
}

.collage {
    height: auto;
    width: 270px;
    border: 6px solid #3882F6;
    /* how to round corners */
    border-radius: 25px;
}

.text {
    width: 270px;
    text-align: center;
    color: #1F2937;
    font-size: 18px;
}


/* End call to action */

/* Start of the quote section */

.quote-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #e5e7eb;
    height: 400px;
}

.quote {
    width: 660px;
    font-size: 36px;
    color: #1F2937;
}

.signature {
    margin-top: 16px;
    padding-left: 370px;
    font-size: 32px;
    font-weight: bold;
}

/* End of the quote section */

/* Start call to action */

.action-container {
    background-color: #3882F6;
    width: 1000px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin-left: 250px;
    margin-top: 50px;
    margin-bottom: 50px;
    border-radius: 25px;
}

.action-body {
    display: flex;
    flex-direction: column;
}

.action-text-main {
    font-size: 24px;
    color: #e5e7eb;
    margin-bottom: 0;
    margin-top: 50px;
}

.action-text-secondary {
    font-size: 18px;
    color: #e5e7eb;
    margin-top: 0;
    margin-bottom: 50px;
}

/* End call to action  */

/* footer */

.footer {
    height: 72px;
    background-color: #1F2937;
    color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
}

ul {
    display: flex;
    list-style-type: none;
    gap: 24px;
    padding: 0 16px;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
}

